recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value x
			setPos(x, y)
                               ^Tree:13: error: overloaded method value setPos with alternatives:
  (x: Int,y: Int)Unit <and>
  (x$1: Int,x$2: Double)Unit <and>
  (x$1: Double,x$2: Int)Unit <and>
  (x$1: Double,x$2: Double)Unit
 cannot be applied to ()
		setPos()
                ^